--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -2,3 +2,58 @@
   width: 30px;
   height: 30px;
 }
+
+nav {
+  text-align: right;
+}
+
+#search-box {
+  padding-top: 15%;
+  text-align: center;
+}
+
+table {
+  width: 90%;
+}
+
+td > a {
+  padding: 5%;
+}
+
+html {
+  height: 100%;
+  box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+body {
+  position: relative;
+  margin: 0;
+  padding-bottom: 6rem;
+  min-height: 100%;
+}
+
+footer {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 1rem;
+  background-color: #efefef;
+  text-align: center;
+}
+
+#left-footer {
+  text-align: left;
+  padding-right: 40%;
+}
+
+#right-footer {
+  text-align: right;
+  padding-left: 40%;
+}
