--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -1,11 +1,46 @@
 .icon {
-  width: 30px;
-  height: 30px;
+  width: 20px;
+  height: 20px;
+}
+
+header {
+  padding-top: 20px;
+  padding-right: 20px;
+}
+
+header a {
+  padding: 8px;
+  text-decoration: none;
+  font-family: Helvetica;
+  font-size: 14px;
+  color: gray;
+}
+
+.header-clickable:hover {
+  text-decoration: underline;
 }
 
 input:focus::-webkit-input-placeholder {
   opacity: 0;
-  border: solid blue 1px;
+}
+
+#google-search {
+  width: 500px;
+  font-size: 15px;
+  border: solid #efefef 1px;
+  padding: 5px;
+  background: url("../images/search_by_voice.png") no-repeat right center;
+  background-size: 15px 20px;
+  background-position: 99% 50%;
+}
+
+#google-search:hover {
+  border: solid gray 1px;
+}
+
+#google-search:focus {
+  outline: none;
+  border: solid #0266C8 1px;
 }
 
 #google-logo {
@@ -18,7 +53,7 @@ input:focus::-webkit-input-placeholder {
   margin-right: 0.5%;
   margin-left: 0.5%;
   text-shadow:none !important;
-  border: none;
+  border: solid #efefef 1px;
   box-shadow:none !important;
   padding: 1%;
   font-family: Arial;
@@ -29,16 +64,12 @@ input:focus::-webkit-input-placeholder {
 
 .button:hover {
   border: solid gray 1px;
+  color: black;
 }
 
 #search-box {
   padding-top: 15%;
   text-align: center;
-}
-
-#google-search {
-  width: 40%;
-  font-size: 20px;
 }
 
 td > a {
